[package]
name = "redis-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
bytes = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.32"
tokio = { version = "1.23.0", features = ["full"] }
